syntax = "proto3";

package rpc;


service Cli {
    rpc PublishTx (Transaction) returns (PublishRet) {}
    rpc GetTransaction (TransactionKey) returns (Transaction) {}
    rpc GetTransactionByHash (TransactionHash) returns (Transaction) {}
    rpc GetBalance (Key) returns (Value){}
    rpc GetState (Key) returns (Value){}
    rpc GetBlock (BlockKey) returns (BlockInfo){}
    rpc GetBlockByHeight (BlockKey) returns (BlockInfo){}
}

message Transaction {
    bytes tx = 1;
}

message PublishRet{
	int32 code = 1;
	bytes hash =2;
}
message Response {
    int32 code = 1;
}

message TransactionKey {
    bytes publisher = 1;
    int64 nonce = 2;
}

message TransactionHash{
	bytes hash=1; 
}
message Key {
    string s = 1;
}

message Value {
    string sv = 2;
}

message BlockKey {
    int64 layer = 1;
}

message Head {
    int64 version = 1;
    bytes parentHash = 2;
    bytes treeHash = 3;
    bytes blockHash = 4;
    bytes info = 5;
    int64 number = 6;
    string witness = 7;
    bytes signature = 8;
    int64 time = 9;
}

message BlockInfo {
    Head head = 1;
    int64 Txcnt = 2;
    repeated TransactionKey txList = 3;
}

